--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Café Esposito - Contacto</title>
 
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
     <!-- Navbar -->
     <nav>
-        <a href="/index.html" class="logo">Café<span> Esposito</span></a>
+        <a href="index.html" class="logo">Café<span> Esposito</span></a>
         <ul class="nav-links">
-            <li><a href="/index.html">Inicio</a></li>
-            <li><a href="/HTML/productos.html">Productos</a></li>
-            <li><a href="/HTML/nosotros.html">Nosotros</a></li>
-            <li><a href="/HTML/contacto.html">Contacto</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="HTML/productos.html">Productos</a></li>
+            <li><a href="HTML/nosotros.html">Nosotros</a></li>
+            <li><a href="HTML/contacto.html">Contacto</a></li>
             <li><a href="#" class="button-carrito">Carrito</a></li>
         </ul>
         <div class="menu-responsive">
@@ -90,10 +90,10 @@
                 <div class="quick-links">
                     <h3>Mapa del sitio</h3>
                     <ul>
-                        <li><a href="/index.html">Inicio</a></li>
-                        <li><a href="/HTML/productos.html">Productos</a></li>
-                        <li><a href="/HTML/nosotros.html">Nosotros</a></li>
-                        <li><a href="/HTML/contacto.html">Contacto</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="HTML/productos.html">Productos</a></li>
+                        <li><a href="HTML/nosotros.html">Nosotros</a></li>
+                        <li><a href="HTML/contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
