--- a/HTML/productos.html
+++ b/HTML/productos.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Café Esposito - Prodcutos</title>
 
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
         <!-- Navbar -->
 <nav>
-    <a href="/index.html" class="logo">Café<span> Esposito</span></a>
+    <a href="index.html" class="logo">Café<span> Esposito</span></a>
     <ul class="nav-links">
-        <li><a href="/index.html">Inicio</a></li>
-        <li><a href="/HTML/productos.html">Productos</a></li>
-        <li><a href="/HTML/nosotros.html">Nosotros</a></li>
-        <li><a href="/HTML/contacto.html">Contacto</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="HTML/productos.html">Productos</a></li>
+        <li><a href="HTML/nosotros.html">Nosotros</a></li>
+        <li><a href="HTML/contacto.html">Contacto</a></li>
         <li><a href="#" class="button-carrito">Carrito</a></li>
     </ul>
     <div class="menu-responsive">
@@ -35,7 +35,7 @@
     <div class="product-container">
         <div class="card">
             <div class="card-header">
-                <img src="/Imagene/Cafe en capsula.png" alt="coffe-capsula">
+                <img src="Imagene/Cafe en capsula.png" alt="coffe-capsula">
                 <h3>Café en Capsula</h3>
             </div>
             <h4>Practicidad sin renunciar al sabor</h4>
@@ -47,7 +47,7 @@
         </div>
                 <div class="card">
             <div class="card-header">
-                <img src="/Imagene/Cafe en molido.png" alt="coffe-molido">
+                <img src="Imagene/Cafe en molido.png" alt="coffe-molido">
                 <h3>Café en Molido</h3>
             </div>
             <h4>Listo para preparar, perfecto para disfrutar</h4>
@@ -59,7 +59,7 @@
         </div>
                 <div class="card">
             <div class="card-header">
-                <img src="/Imagene/Cafe en grano.png" alt="coffe-grano">
+                <img src="Imagene/Cafe en grano.png" alt="coffe-grano">
                 <h3>Café en Grano</h3>
             </div>
             <h4>Frescura en cada grano, sabor en cada molienda.</h4>
@@ -104,10 +104,10 @@
                         <div class="quick-links">
                             <h3>Mapa del sitio</h3>
                             <ul>
-                                <li><a href="/index.html">Inicio</a></li>
-                                <li><a href="/HTML/productos.html">Productos</a></li>
-                                <li><a href="/HTML/nosotros.html">Nosotros</a></li>
-                                <li><a href="/HTML/contacto.html">Contacto</a></li>
+                                <li><a href="index.html">Inicio</a></li>
+                                <li><a href="HTML/productos.html">Productos</a></li>
+                                <li><a href="HTML/nosotros.html">Nosotros</a></li>
+                                <li><a href="HTML/contacto.html">Contacto</a></li>
                             </ul>
                         </div>
                         <div class="footer-contact">
