--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Café Esposito</title>
 
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
@@ -14,12 +14,12 @@
         <!-- Navbar -->
         <section class="nav-section">
             <nav class="nav-background">
-                <a href="/index.html" class="logo" >Café<span> Esposito</span></a>
+                <a href="index.html" class="logo" >Café<span> Esposito</span></a>
                 <ul class="nav-links">
-                    <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/HTML/productos.html">Productos</a></li>
-                    <li><a href="/HTML/nosotros.html">Nosotros</a></li>
-                    <li><a href="/HTML/contacto.html">Contacto</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="HTML/productos.html">Productos</a></li>
+                    <li><a href="HTML/nosotros.html">Nosotros</a></li>
+                    <li><a href="HTML/contacto.html">Contacto</a></li>
                     <li><a href="#" class="button-carrito">Carrito</a></li>
                 </ul>
                 <div class="menu-responsive">
@@ -33,7 +33,7 @@
                 <p>En Café Esposito, cada taza es un ritual - Un momento donde el aroma envolvente, 
                     la calidez del grano y el sabor autentico se encuentran en perfecta armonía. 
                     No es solo un café, es una experiencia unica</p>
-                <a href="/HTML/productos.html" class="cta-button">Explora nuestro catalogo</a>
+                <a href="HTML/productos.html" class="cta-button">Explora nuestro catalogo</a>
             </div>
         </section>
 
@@ -42,8 +42,8 @@
             <div class="process-header">
                 <div class="process-container">
                     <div class="process-left">
-                        <img src="/Imagene/coffee2.jpg" alt="Process-image">
-                        <img src="/Imagene/gallery5.jpg" alt="three-coffe-image">
+                        <img src="Imagene/coffee2.jpg" alt="Process-image">
+                        <img src="Imagene/gallery5.jpg" alt="three-coffe-image">
                     </div>
                     <div class="process-right">
                         <h2 class="process-tittle">Nustro proceso para que vivas<span> tu experiencia unica</span></h2>
@@ -86,10 +86,10 @@
                         <div class="quick-links">
                             <h3>Mapa del sitio</h3>
                             <ul>
-                                <li><a href="/index.html">Inicio</a></li>
-                                <li><a href="/HTML/productos.html">Productos</a></li>
-                                <li><a href="/HTML/nosotros.html">Nosotros</a></li>
-                                <li><a href="/HTML/contacto.html">Contacto</a></li>
+                                <li><a href="index.html">Inicio</a></li>
+                                <li><a href="HTML/productos.html">Productos</a></li>
+                                <li><a href="HTML/nosotros.html">Nosotros</a></li>
+                                <li><a href="HTML/contacto.html">Contacto</a></li>
                             </ul>
                         </div>
                         <div class="footer-contact">
