--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -18,6 +18,7 @@
             <li><a href="productos.html">Productos</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
             <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
             <li><a href="#" class="button-carrito">Carrito</a></li>
         </ul>
         <div class="menu-responsive">
@@ -27,7 +28,6 @@
         </div>
     </nav>
 
-    <!-- MAIN CONTENT -->
     <section class="contact-section">
         <div class="Contactanos">
             <h2>Contác<span>tanos</span></h2>
@@ -61,7 +61,6 @@
     </section>
 
 
-    <!-- FIN MAIN CONTENT -->
 
 
     <!-- FOOTER -->
@@ -94,6 +93,7 @@
                         <li><a href="productos.html">Productos</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="galeria.html">Galeria</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
