--- a/HTML/nosotros.html
+++ b/HTML/nosotros.html
@@ -18,6 +18,7 @@
         <li><a href="productos.html">Productos</a></li>
         <li><a href="nosotros.html">Nosotros</a></li>
         <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="galeria.html">Galeria</a></li>
         <li><a href="#" class="button-carrito">Carrito</a></li>
     </ul>
     <div class="menu-responsive">
@@ -86,6 +87,7 @@
                                 <li><a href="productos.html">Productos</a></li>
                                 <li><a href="nosotros.html">Nosotros</a></li>
                                 <li><a href="contacto.html">Contacto</a></li>
+                                <li><a href="galeria.html">Galeria</a></li>
                             </ul>
                         </div>
                         <div class="footer-contact">
