--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="HTML/productos.html">Productos</a></li>
                     <li><a href="HTML/nosotros.html">Nosotros</a></li>
                     <li><a href="HTML/contacto.html">Contacto</a></li>
+                    <li><a href="galeria.html">Galeria</a></li>
                     <li><a href="#" class="button-carrito">Carrito</a></li>
                 </ul>
                 <div class="menu-responsive">
@@ -90,6 +91,7 @@
                                 <li><a href="HTML/productos.html">Productos</a></li>
                                 <li><a href="HTML/nosotros.html">Nosotros</a></li>
                                 <li><a href="HTML/contacto.html">Contacto</a></li>
+                                <li><a href="galeria.html">Galeria</a></li>
                             </ul>
                         </div>
                         <div class="footer-contact">
